Add movie_comment table, optimize docker build
- Add movie_comment table and handlers
- Optimize docker build by moving out library downloading from building
  layer. `go mod download`
