# main.go
@@ -67,22 +67,30 @@ func main() {
 	mux.HandleFunc("POST /user", handlerObj.CreateUserHandler)
 	mux.HandleFunc("PATCH /user/{user_id}", handlerObj.UpdateUserHandler)
 	mux.HandleFunc("DELETE /user/{user_id}", handlerObj.DeleteUserHandler)
+	// rating
+	mux.HandleFunc("GET /user/{user_id}/rating", handlerObj.GetRatedMovieListHandler)
+	mux.HandleFunc("POST /user/{user_id}/rating", handlerObj.CreateRatedMovieHandler)
+	mux.HandleFunc("PATCH /user/{user_id}/rating", handlerObj.UpdateRatedMovieHandler)
+	mux.HandleFunc("DELETE /user/{user_id}/rating/{movie_id}", handlerObj.DeleteRatedMovieHandler)
+	// fav
+	mux.HandleFunc("GET /user/{user_id}/favorite_movie", handlerObj.GetFavoriteMovieListHandler)
+	mux.HandleFunc("POST /user/{user_id}/favorite_movie", handlerObj.CreateMovieFavoriteHandler)
+	mux.HandleFunc("PATCH /user/{user_id}/favorite_movie", handlerObj.UpdateMovieHandler)
+	mux.HandleFunc("DELETE /user/{user_id}/favorite_movie/{movie_id}", handlerObj.DeleteFavoriteMovieHandler)
+	// comment
+	mux.HandleFunc("GET /user/{user_id}/comment", handlerObj.GetMovieCommentListHandler)
+	mux.HandleFunc("POST /user/{user_id}/comment", handlerObj.CreateMovieCommentHandler)
+	mux.HandleFunc("PATCH /user/{user_id}/comment", handlerObj.UpdateMovieCommentHandler)
+	mux.HandleFunc("DELETE /user/{user_id}/comment", handlerObj.DeleteMovieCommentHandler)
 	// movie
 	mux.HandleFunc("GET /movie/{movie_id}", handlerObj.GetMovieHandler)
 	mux.HandleFunc("GET /movie", handlerObj.GetMovieListHandler)
 	mux.HandleFunc("POST /movie", handlerObj.CreateMovieHandler)
 	mux.HandleFunc("PATCH /movie/{movie_id}", handlerObj.UpdateMovieHandler)
 	mux.HandleFunc("DELETE /movie/{movie_id}", handlerObj.DeleteMovieHandler)
-	// favorite_movie
-	mux.HandleFunc("GET /user/{user_id}/favorite_movie", handlerObj.GetFavoriteMovieListHandler)
-	mux.HandleFunc("POST /user/{user_id}/favorite_movie", handlerObj.CreateMovieFavoriteHandler)
-	mux.HandleFunc("PATCH /user/{user_id}/favorite_movie", handlerObj.UpdateMovieHandler)
-	mux.HandleFunc("DELETE /user/{user_id}/favorite_movie/{movie_id}", handlerObj.DeleteFavoriteMovieHandler)
-	// rated_movie
-	mux.HandleFunc("GET /user/{user_id}/rated_movie", handlerObj.GetRatedMovieListHandler)
-	mux.HandleFunc("POST /user/{user_id}/rated_movie", handlerObj.CreateRatedMovieHandler)
-	mux.HandleFunc("PATCH /user/{user_id}/rated_movie", handlerObj.UpdateRatedMovieHandler)
-	mux.HandleFunc("DELETE /user/{user_id}/rated_movie/{movie_id}", handlerObj.DeleteRatedMovieHandler)
+	// comment
+	mux.HandleFunc("GET /movie/{movie_id}/comment", handlerObj.GetMovieCommentListHandler)
+
 	// System specific commands
 	mux.Handle("GET /healthcheck", handlers.CheckHealthHandlerCreate(dbPool))
 	// Swagger
